--- a/index.html
+++ b/index.html
@@ -6,11 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans&family=Poppins&family=Roboto:wght@500&family=Work+Sans&display=swap"
+        rel="stylesheet">
     <title>Candidus</title>
 </head>
 
 <body>
-
+    <nav class="container">
+        <h1>Candidus</h1>
+        <ul>
+            <li>Home</li>
+            <li>Contact</li>
+            <li>About</li>
+            <li>Pages</li>
+            <li>Blogs</li>
+        </ul>
+    </nav>
+    <section class="container section">
+        <div>
+            <div class="section-title-container">
+                <p class="section-title-primary">Creativity and Design</p>
+                <div class="line-secondary"></div>
+            </div>
+            <h1 class="section-text-primary">We’re a design studio that believe in the ideas.</h1>
+        </div>
+    </section>
 </body>
 
 </html>
