--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li>Blogs</li>
         </ul>
     </nav>
-    <section class="container section">
+    <section class="container section-primary">
         <div>
             <div class="section-title-container">
                 <p class="section-title-primary">Creativity and Design</p>
@@ -33,6 +33,49 @@
             </div>
             <h1 class="section-text-primary">We’re a design studio that believe in the ideas.</h1>
         </div>
+    </section>
+    <section class="photo-gallery">
+        <img src="./images2/image1.jpg" alt="">
+        <img class="long-img" src="./images2/image2.jpg" alt="">
+        <img src="./images2/image3.png" alt="">
+        <img src="./images2/image4.png" alt="">
+        <img src="./images2/masonary-img-14 1.png" alt="">
+        <img src="./images2/masonary-img-16 1.png" alt="">
+        <img src="./images2/masonary-img-17 1.png" alt="">
+        <img src="./images2/masonary-img-19 1.png" alt="">
+        <img src="./images2/masonary-img-20 1.png" alt="">
+        <img src="./images2/masonary-img-21 1.png" alt="">
+        <img src="./images2/masonary-img-22 1.png" alt="">
+    </section>
+    <section class="container section-primary">
+        <div>
+            <div class="section-title-container">
+                <p class="section-title-primary">Creativity and Design</p>
+                <div class="line-primary"></div>
+            </div>
+            <h1 class="section-text-primary">We are creative perfectionists and this lets us go beyond existing
+                framework in developing strategies, as well as in creativity & design.</h1>
+        </div>
+    </section>
+    <section class="section-secondary">
+        <div class="container">
+            <div>
+                <div class="section-title-container">
+                    <p class="section-title-tertiary">Our Expertise and Services</p>
+                    <div class="line-tertiary"></div>
+                </div>
+                <h1 class="section-text-tertiary">We create beautifully-crafted websites that stand out from the crowd -
+                    and
+                    perfect function comes as standard. We combine design and technical craft.</h1>
+                <div class="logo-container">
+                    <img src="./logos/logo-10.png" alt="">
+                    <img src="./logos/logo-11.png" alt="">
+                    <img src="./logos/logo-12.png" alt="">
+                    <img src="./logos/logo-9.png" alt="">
+                </div>
+            </div>
+        </div>
+
     </section>
 </body>
 
